# paychecks

./: .gitignore  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  mergify.yml
.specify/memory/: constitution.md
specs/001-paycheck-w2-validator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-paycheck-w2-validator/checklists/: requirements.md
specs/001-paycheck-w2-validator/contracts/: cli-schema.md
src/paychecks/: cli.py  constants.py
src/paychecks/extractor/: __init__.py  _text_parser.py  claude_fallback.py  ocr.py  pdf.py
src/paychecks/models/: __init__.py  enums.py  errors.py  paycheck.py  results.py  salary.py  w2.py
src/paychecks/reporter/: csv_export.py  terminal.py  text_export.py
src/paychecks/validator/: paycheck.py  w2.py
tests/: conftest.py
tests/fixtures/builders/: paycheck_builder.py  w2_builder.py
tests/integration/: test_batch_command.py  test_performance.py  test_reconcile_command.py  test_validate_command.py
tests/unit/: test_batch.py  test_edge_cases.py  test_extractor_pdf.py  test_extractor_w2.py  test_models.py  test_validator_paycheck.py  test_validator_w2.py
