[project]
name = "paychecks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.26.5",
    "rich>=15.0.0",
    "pdfplumber>=0.11.9",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17",
    "reportlab>=4.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=5",
    "hypothesis>=6.155.7",
    "ruff>=0.15.16",
]

[project.scripts]
paychecks = "paychecks.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paychecks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
]
